plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.5'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.personal.doctor'
version = '0.0.1-SNAPSHOT'

jar {
	enabled = false
}

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation('org.projectlombok:lombok')
	annotationProcessor('org.projectlombok:lombok')
	testImplementation('org.projectlombok:lombok')
	testAnnotationProcessor('org.projectlombok:lombok')

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
	implementation('com.h2database:h2')
	implementation('org.springframework.session:spring-session-jdbc')
	testImplementation('org.springframework.boot:spring-boot-starter-test')
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	runtimeOnly 'com.mysql:mysql-connector-j'	// mysql connector
}

tasks.named('test') {
	useJUnitPlatform()
}
